# RIOT-rs

book/src/: coding-conventions.md
examples/: laze.yml
examples/http-client/: Cargo.toml  README.md  laze.yml
examples/http-client/src/: main.rs
